--- a/Components/Pages/ResourcesPage.razor
+++ b/Components/Pages/ResourcesPage.razor
@@ -1,5 +1,5 @@
 @page "/resources"
-@* @inject ApplicationDatabaseContext *@
+@inject ResourceService resourceService
 @rendermode @(new InteractiveServerRenderMode(prerender: false))
 
 <h1>Resources</h1>
@@ -56,6 +56,8 @@
                 <td>@resource.UpdatedAt</td>
             </tr>
         }
+    using Services;
+    using Services;
 
     </tbody>
 
@@ -66,20 +68,21 @@
     public List<Resource> resources = new List<Resource>() {
         new Resource() {
             Id=1, Name="Mackbook", Quantity=3, Status=ResourceStatus.Available, 
-            CreatedAt=DateTime.Now, UpdatedAt=DateTime.Now}
-        };
+            CreatedAt=DateTime.Now, UpdatedAt=DateTime.Now
+        },
+    };
+    
     
     public Resource newResource = new Resource();
 
     public async Task addResource() {
-        // Adding the resource to the list of resources
-        resources.Add(newResource);
-        // Cleaning the resources and making it blank
-        newResource = new Resource();
+        // add to database
+        await resourceService.Post(newResource);
+        resources = resourceService.Get();
         StateHasChanged();
     }
 
     protected override async Task OnInitializedAsync() {
-        
+        resources = resourceService.Get();
     }
 }
