Adding more pages

--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -15,7 +15,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="resources" Match="NavLinkMatch.All">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Resources
             </NavLink>
         </div>
@@ -33,9 +33,9 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
+            <NavLink class="nav-link" href="visits">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Visits
-                
+
             </NavLink>
         </div>
     </nav>
